cloudformation-template2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Deploy EC2 instances in a VPC using CloudFormation

Resources:

  #VPC
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: "MyVPC"

  # Internet Gateway
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Name"
          Value: "MyInternetGateway"

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Route Table for Public Subnets
  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: "MyRouteTable"

  PublicRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway


  # Public Subnets
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        - Key: "Name"
          Value: "MyPublicSubnet1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: "Name"
          Value: "PublicSubnet2"

  # Associate Subnets with the Route Table
  SubnetRouteTableAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTable

  SubnetRouteTableAssociation2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTable

  # Security Group
  SecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupDescription: "Enable SSH and HTTP access"
       VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
         
   # EC2 Instances in Public Subnets       
  EC2Instance1:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t2.micro"
      ImageId: "ami-0182f373e66f89c85"
      SubnetId: !Ref PublicSubnet1
      # KeyName: "my-key-pair"  
      SecurityGroupIds:
        - !Ref SecurityGroup
      Tags:
        - Key: "Name"
          Value: "Demo1"
      UserData: 
        Fn::Base64: !Sub |
            #!/bin/bash
            #Update system
            sudo dnf update -y
            
            #Install docker
            sudo dnf install docker -y

            #start and enable docker
            sudo systemctl start docker
            sudo systemctl enable docker

            # Pull docker image
            sudo docker pull ojunwoo/testapp_1:latest

            # Run the docker container and expose port 80
            sudo docker run -d -p 80:80 ojunwoo/testapp_1:latest

  EC2Instance2:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t2.micro"
      ImageId: "ami-0182f373e66f89c85"
      SubnetId: !Ref PublicSubnet2
      # KeyName: "my-key-pair"  
      SecurityGroupIds:
        - !Ref SecurityGroup
      Tags:
        - Key: "Name"
          Value: "Demo2"
      UserData: 
        Fn::Base64: !Sub |
            #!/bin/bash
            #Update system
            sudo dnf update -y
            
            #Install docker
            sudo dnf install docker -y

            #start and enable docker
            sudo systemctl start docker
            sudo systemctl enable docker

            # Pull docker image
            sudo docker pull ojunwoo/testapp_1:latest

            # Run the docker container and expose port 80
            sudo docker run -d -p 80:80 ojunwoo/testapp_1:latest

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC

  PublicSubnet1Id:
    Description: Public Subnet 1 ID
    Value: !Ref PublicSubnet1

  PublicSubnet2Id:
    Description: Public Subnet 2 ID
    Value: !Ref PublicSubnet2

  EC2Instance1PublicIP:
    Description: Public IP of EC2 Instance 1
    Value: !GetAtt EC2Instance1.PublicIp

  EC2Instance2PublicIP:
    Description: Public IP of EC2 Instance 2
    Value: !GetAtt EC2Instance2.PublicIp
